--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ nav {
 nav a {
 	position: relative;
 	font-size: 1.5rem;
-	color: #fff59a;
+	color: black;
 	text-decoration: none;
 	padding: 0 1rem 0.15rem 1rem;
 	transition: color 0.3s ease;
@@ -51,14 +51,14 @@ nav a:hover::before {
 .outer-circle-large {
 	width: 100%;
 	height: 100%;
-	border: 0.15vmin solid lemonchiffon;
+	border: 0.15vmin solid #4c2b1b;
 	border-radius: 50%;
 	position: relative;
 }
 .outer-circle-large-inner {
 	width: 50%;
 	height: 50%;
-	border: 0.15vmin solid lemonchiffon;
+	border: 0.15vmin solid #4c2b1b;
 	border-radius: 50%;
 	position: absolute;
 	top: 5%;
@@ -67,7 +67,7 @@ nav a:hover::before {
 .outer-circle-large-inner-inner {
 	width: 10%;
 	height: 10%;
-	border: 0.15vmin solid lemonchiffon;
+	border: 0.15vmin solid #4c2b1b;
 	border-radius: 50%;
 	position: absolute;
 	top: 5%;
@@ -83,14 +83,14 @@ nav a:hover::before {
 .outer-circle-medium {
 	width: 100%;
 	height: 100%;
-	border: 0.15vmin solid lemonchiffon;
+	border: 0.15vmin solid #4c2b1b;
 	border-radius: 50%;
 	position: relative;
 }
 .inner-circle-medium {
 	width: 40%;
 	height: 40%;
-	border: 0.15vmin solid lemonchiffon;
+	border: 0.15vmin solid #4c2b1b;
 	border-radius: 50%;
 	position: absolute;
 	top: 55%;
@@ -172,23 +172,39 @@ h6.end[data-scroll="out"] .char {
 	opacity: 0;
 	transform: translateY(3em) scale(0.15);
 }
+
 .bottom {
-	height: 100vh;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: end;
-	align-content: end;
-	margin-bottom: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* Isso centralizará verticalmente */
+    background-color: #f5ccc4; /* Cor de fundo */
+    padding: 20px; /* Espaçamento interno */
+}
+
+.map-container {
+    margin-bottom: 20px; /* Adiciona um espaço entre o mapa e as informações de licença */
+}
+
+.map-wrapper {
+    background-color: white; /* Cor de fundo do wrapper do mapa */
+    border-radius: 10px; /* Borda arredondada */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra */
+    overflow: hidden; /* Oculta o conteúdo extra do mapa */
+}
+
+.license-info {
+    text-align: center; /* Centraliza o texto */
+    font-size: 14px; /* Define o tamanho da fonte */
+    color: #555; /* Define a cor do texto */
 }
 
 body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	background: #333;
-	background-image: linear-gradient(to right, transparent 19px, #444 1px),
-		linear-gradient(to bottom, transparent 19px, #444 1px);
+	background: #f5ccc4;
 	background-size: 20px 20px;
 	background-attachment: fixed;
 	overflow-x: hidden;
