--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* inspiration from https://ludmillamaury.com/ */
 
 nav {
 	position: fixed;
@@ -222,6 +221,7 @@ body {
 body {
   background-color: #f0f0f0;
   font-family: Lato, sans-serif;
+  align-items: center;
 }
 
 h1.page-title {
@@ -240,7 +240,7 @@ h1.page-title {
 }
 
 .tag-sale {
-  background-color: #4fdaa4;
+  background-color: #BF9860;
   width: 86px;
   height: 98px;
   position: absolute;
@@ -252,7 +252,7 @@ h1.page-title {
 }
 
 .tag-sale::before {
-  content: "SALE";
+  content: "%";
   color: #fff;
   font-weight: bold;
   display: block;
@@ -280,7 +280,7 @@ h1.page-title {
   background: #fff;
   width: 100px;
   height: 100px;
-  color: #4FDAA4;
+  color: #BF9860;
   border-radius: 50%;
   font-size: 25px;
   text-align: center;
@@ -295,12 +295,12 @@ h1.page-title {
 
 .product-link:hover {
   text-decoration: none;
-  color: #4FDAA4;
+  color: #cf7f00;
 }
 
 
 .hover-link {
-  background-color: #4FDAA4;
+  background-color: transparent;
   position: absolute;
   left: 0;
   top: 0;
@@ -332,7 +332,7 @@ h1.page-title {
   font-size: 23px;
   text-align: right;
   font-weight: bold;
-  color: #2DD493;
+  color: #BF9860;
   margin-bottom: 5px;
 }
 
