--- a/css/stylelistaprodutos.css
+++ b/css/stylelistaprodutos.css
@@ -16,12 +16,18 @@ h1.page-title {
   font-weight: bold;
 }
 
+.lista {
+  padding-top: 150px;
+}
+
 .product-container {
   background-color: #fff;
-  height: 400px;
+  height: 450px;
+  width: 350px;
   overflow: hidden;
   position: relative;
   margin-bottom: 20px;
+
 }
 
 .tag-sale {
@@ -55,6 +61,7 @@ h1.page-title {
 .product-image {
   padding: 20px;
   height: 323px;
+  width: 350px;
   position: relative;
   overflow: hidden;
   transition: 1s;
@@ -98,12 +105,12 @@ h1.page-title {
 .product-image {
   display: flex;
   align-items: center;
-  width: 250px;
+  width: 310px;
   height: 300px;
 }
 
 .product-image img{
-  width: 100% ;
+  width: 110% ;
   height: 100%;
   align-items: center;
 }
@@ -238,4 +245,46 @@ h1.page-title {
   82.48% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
   93.59% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
   100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+}
+
+nav {
+	position: fixed;
+	top: 10vmin;
+	right: 20vmin;
+	width: 15em;
+	height: 10vh;
+	display: flex;
+	justify-content: space-between;
+	align-items: start;
+	z-index: 100;
+}
+
+nav a {
+	position: relative;
+	font-size: 1.5rem;
+	color: black;
+	text-decoration: none;
+	padding: 0 1rem 0.15rem 1rem;
+	transition: color 0.3s ease;
+}
+nav a:hover {
+	color: white;
+}
+nav a::before {
+	content: "";
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 1.5px;
+	bottom: 0;
+	left: 0;
+	background: white;
+	transform: scaleX(0);
+	transform-origin: top right;
+	transition: transform 0.2s ease;
+}
+
+nav a:hover::before {
+	transform: scaleX(1);
+	transform-origin: top left;
 }
