--- a/css/stylelistaprodutos.css
+++ b/css/stylelistaprodutos.css
@@ -1,290 +1,77 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,300italic);
-
-body {
-  background-color: #f0f0f0;
-  font-family: Lato, sans-serif;
-  justify-content: center;
+.card {
+  position: relative;
+  width: 11.875em;
+  height: 16.5em;
+  box-shadow: 0px 1px 13px rgba(0,0,0,0.1);
+  cursor: pointer;
+  transition: all 120ms;
   display: flex;
-  
-}
-
-
-h1.page-title {
-  margin-top: 70px;
-  margin-bottom: 70px;
-  color: #485a64;
-  font-weight: bold;
-}
-
-.lista {
-  padding-top: 150px;
-}
-
-.product-container {
-  background-color: #fff;
-  height: 450px;
-  width: 350px;
-  overflow: hidden;
-  position: relative;
-  margin-bottom: 20px;
-
-}
-
-.tag-sale {
-  background-color: #4fdaa4;
-  width: 86px;
-  height: 98px;
-  position: absolute;
-  color: #fff;
-  right: -41px;
-  z-index: 9;
-  top: -44px;
-  transform: rotate(137deg);
-}
-
-.tag-sale::before {
-  content: "%";
-  color: #fff;
-  font-weight: bold;
-  display: block;
-  transform-origin: top center;
-  transform: rotate(222.5deg) translateX(-28px) translateY(-37px);
-}
-
-.product-description {
-  background-color: #F7F7F7;
-  border-top: 1px solid #EFEFEF;
-  padding: 10px 20px;
-  color: #797979;
-}
-
-.product-image {
-  padding: 20px;
-  height: 323px;
-  width: 350px;
-  position: relative;
-  overflow: hidden;
-  transition: 1s;
-}
-
-.product-link {
-  position: absolute;
+  align-items: center;
+  justify-content: center;
   background: #fff;
-  width: 100px;
-  height: 100px;
-  color: #4FDAA4;
-  border-radius: 50%;
-  font-size: 25px;
-  text-align: center;
-  padding: 22px 0;
-  line-height: 25px;
-  left: calc(50% - 50px);
-  top: calc(50% - 50px);
-  opacity: 0;
-  transition: 1s;
-  font-style: italic;
+  padding: 0.5em;
+  padding-bottom: 3.4em;
 }
 
-.product-link:hover {
-  text-decoration: none;
-  color: #4FDAA4;
-}
-
-
-.hover-link {
-  background-color: #4FDAA4;
+.card::after {
+  content: "Adicionar ao Carrinho";
+  font-size: 11px;
+  padding-top: 1.25em;
+  padding-left: 1.25em;
   position: absolute;
   left: 0;
-  top: 0;
+  bottom: -60px;
+  background: #4c2b1b;
+  color: #fff;
+  height: 2.5em;
+  width: 92%;
+  transition: all 80ms;
+  font-weight: 600;
+  text-transform: uppercase;
   opacity: 0;
-  width: 100%;
-  height: 100%;
-  transition: 0.5s;
 }
 
-.product-image {
-  display: flex;
-  align-items: center;
-  width: 310px;
-  height: 300px;
+.card .title {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9em;
+  position: absolute;
+  left: 0.625em;
+  bottom: 1.875em;
+  font-weight: 400;
+  color: #000;
 }
 
-.product-image img{
-  width: 110% ;
-  height: 100%;
-  align-items: center;
+.card .price {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 0.9em;
+  position: absolute;
+  left: 0.625em;
+  bottom: 0.625em;
+  color: #000;
 }
 
-.product-description h1 {
-  font-size: 23px;
-  margin-bottom: 5px;
-  margin-top: 0;
-  display: inline-block;
-  width: 78%;
-}
-
-.product-description p {
-  color: #C4C4C4;
-}
-
-.product-description .price {
-  display: inline-block;
-  width: 20%;
-  font-size: 23px;
-  text-align: right;
-  font-weight: bold;
-  color: #2DD493;
-  margin-bottom: 5px;
-}
-
-.product-option {
-  border-top: 1px solid #D2D2D2;
-}
-
-.product-option h3 {
-  font-size: 16px;
-  font-weight: bold;
-  margin-bottom: 3px;
-}
-
-.product-option .product-color ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.product-option .product-color li {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-}
-
-.product-color li.red {
-  background-color: #F75375;
-}
-.product-color li.blue {
-  background-color: #53A0F7;
-}
-.product-color li.green {
-  background-color: #59CFAF;
-}
-.product-color li.gray {
-  background-color: #C7C7C7;
-}
-.product-color li.black {
-  background-color: #4E5156;
-}
-.product-color li.dark-blue {
-  background-color: #2060AF;
-}
-
-.product-container:hover {
-  box-shadow: 0px 10px 25px -2px rgba(0,0,0,0.36);
-}
-
-.product-container:hover .product-image {
-  height: 180px;
-  transition: 1s;
-}
-.product-container:hover .product-option {
-  display: block;
-}
-.product-container:hover .hover-link {
-  opacity: 0.5;
-}
-.product-container:hover .product-link {
+.card:hover::after {
+  bottom: 0;
   opacity: 1;
 }
 
-.product-link {
- text-align: center;
-}
-.product-link:hover {
-  -webkit-animation: hovering 1000ms linear both;
-  animation: hovering 1000ms linear both;
+.card:active {
+  transform: scale(0.98);
 }
 
-@-webkit-keyframes hovering {
-  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  2.3% { -webkit-transform: matrix3d(1.102, 0, 0, 0, 0, 1.102, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.102, 0, 0, 0, 0, 1.102, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  4.6% { -webkit-transform: matrix3d(1.136, 0, 0, 0, 0, 1.136, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.136, 0, 0, 0, 0, 1.136, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  7.41% { -webkit-transform: matrix3d(1.099, 0, 0, 0, 0, 1.099, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.099, 0, 0, 0, 0, 1.099, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  10.21% { -webkit-transform: matrix3d(1.023, 0, 0, 0, 0, 1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.023, 0, 0, 0, 0, 1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  13.01% { -webkit-transform: matrix3d(0.962, 0, 0, 0, 0, 0.962, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.962, 0, 0, 0, 0, 0.962, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  15.72% { -webkit-transform: matrix3d(0.942, 0, 0, 0, 0, 0.942, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.942, 0, 0, 0, 0, 0.942, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  18.52% { -webkit-transform: matrix3d(0.958, 0, 0, 0, 0, 0.958, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.958, 0, 0, 0, 0, 0.958, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  21.32% { -webkit-transform: matrix3d(0.99, 0, 0, 0, 0, 0.99, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.99, 0, 0, 0, 0, 0.99, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  24.12% { -webkit-transform: matrix3d(1.016, 0, 0, 0, 0, 1.016, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.016, 0, 0, 0, 0, 1.016, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  26.83% { -webkit-transform: matrix3d(1.025, 0, 0, 0, 0, 1.025, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.025, 0, 0, 0, 0, 1.025, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  32.43% { -webkit-transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  38.04% { -webkit-transform: matrix3d(0.989, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.989, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  49.15% { -webkit-transform: matrix3d(1.005, 0, 0, 0, 0, 1.005, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.005, 0, 0, 0, 0, 1.005, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  60.26% { -webkit-transform: matrix3d(0.998, 0, 0, 0, 0, 0.998, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.998, 0, 0, 0, 0, 0.998, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  71.37% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  82.48% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  93.59% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+.card:active::after {
+  content: "Added !";
+  height: 3.125em;
 }
 
-@keyframes hovering {
-  0% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  2.3% { -webkit-transform: matrix3d(1.102, 0, 0, 0, 0, 1.102, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.102, 0, 0, 0, 0, 1.102, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  4.6% { -webkit-transform: matrix3d(1.136, 0, 0, 0, 0, 1.136, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.136, 0, 0, 0, 0, 1.136, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  7.41% { -webkit-transform: matrix3d(1.099, 0, 0, 0, 0, 1.099, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.099, 0, 0, 0, 0, 1.099, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  10.21% { -webkit-transform: matrix3d(1.023, 0, 0, 0, 0, 1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.023, 0, 0, 0, 0, 1.023, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  13.01% { -webkit-transform: matrix3d(0.962, 0, 0, 0, 0, 0.962, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.962, 0, 0, 0, 0, 0.962, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  15.72% { -webkit-transform: matrix3d(0.942, 0, 0, 0, 0, 0.942, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.942, 0, 0, 0, 0, 0.942, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  18.52% { -webkit-transform: matrix3d(0.958, 0, 0, 0, 0, 0.958, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.958, 0, 0, 0, 0, 0.958, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  21.32% { -webkit-transform: matrix3d(0.99, 0, 0, 0, 0, 0.99, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.99, 0, 0, 0, 0, 0.99, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  24.12% { -webkit-transform: matrix3d(1.016, 0, 0, 0, 0, 1.016, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.016, 0, 0, 0, 0, 1.016, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  26.83% { -webkit-transform: matrix3d(1.025, 0, 0, 0, 0, 1.025, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.025, 0, 0, 0, 0, 1.025, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  32.43% { -webkit-transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.004, 0, 0, 0, 0, 1.004, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  38.04% { -webkit-transform: matrix3d(0.989, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.989, 0, 0, 0, 0, 0.989, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  49.15% { -webkit-transform: matrix3d(1.005, 0, 0, 0, 0, 1.005, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.005, 0, 0, 0, 0, 1.005, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  60.26% { -webkit-transform: matrix3d(0.998, 0, 0, 0, 0, 0.998, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(0.998, 0, 0, 0, 0, 0.998, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  71.37% { -webkit-transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1.001, 0, 0, 0, 0, 1.001, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  82.48% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  93.59% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
-  100% { -webkit-transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+.text {
+  max-width: 55px;
 }
 
-nav {
-	position: fixed;
-	top: 10vmin;
-	right: 20vmin;
-	width: 15em;
-	height: 10vh;
-	display: flex;
-	justify-content: space-between;
-	align-items: start;
-	z-index: 100;
-}
-
-nav a {
-	position: relative;
-	font-size: 1.5rem;
-	color: black;
-	text-decoration: none;
-	padding: 0 1rem 0.15rem 1rem;
-	transition: color 0.3s ease;
-}
-nav a:hover {
-	color: white;
-}
-nav a::before {
-	content: "";
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 1.5px;
-	bottom: 0;
-	left: 0;
-	background: white;
-	transform: scaleX(0);
-	transform-origin: top right;
-	transition: transform 0.2s ease;
-}
-
-nav a:hover::before {
-	transform: scaleX(1);
-	transform-origin: top left;
+.image {
+  background: rgb(241, 241, 241);
+  width: auto;
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
