--- a/css/cart.css
+++ b/css/cart.css
@@ -104,6 +104,24 @@ body {
     background-color: #332014;
 }
 
+.checkout-button {
+    padding: 15px;
+    background-color: #5344db;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.checkout-button:hover {
+    background-color: #372d91;
+}
+
 .toast {
     visibility: hidden;
     min-width: 250px;
@@ -111,37 +129,36 @@ body {
     background-color: #333;
     color: #fff;
     text-align: center;
-    border-radius: 2px;
+    border-radius: 5px;
+    padding: 10px;
     position: fixed;
     z-index: 1;
     left: 50%;
     bottom: 30px;
     font-size: 17px;
-    padding: 10px;
-    border-radius: 10px;
 }
-  
+
 .toast.show {
     visibility: visible;
     -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
-  
+
 @-webkit-keyframes fadein {
     from { bottom: 0; opacity: 0; }
     to { bottom: 30px; opacity: 1; }
 }
-  
+
 @keyframes fadein {
     from { bottom: 0; opacity: 0; }
     to { bottom: 30px; opacity: 1; }
 }
-  
+
 @-webkit-keyframes fadeout {
     from { bottom: 30px; opacity: 1; }
     to { bottom: 0; opacity: 0; }
 }
-  
+
 @keyframes fadeout {
     from { bottom: 30px; opacity: 1; }
     to { bottom: 0; opacity: 0; }
