--- a/css/cart.css
+++ b/css/cart.css
@@ -1,18 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+:root {
+    --primary-color: #4c2b1b;
+    --second-color: #e42f0a;
+    --background-color: #f5ccc4;
+    --white: #ffffff;
+    --grey: #484848;
+    --light-grey: #efefef;
+    --shadow: rgba(0, 0, 0, 0.1);
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    user-select: none;
     font-family: 'Poppins', sans-serif;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #f5ccc4;
-    margin: 0;
-    padding: 0;
+    background-color: var(--background-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,31 +33,31 @@ body {
 
 .navbar {
     width: 100%;
-    background: #4c2b1b;
-    padding: 10px 20px;
+    background: var(--primary-color);
+    padding: 15px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: white;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    color: var(--white);
+    box-shadow: 0 2px 4px var(--shadow);
 }
 
 .navbar-title {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     font-weight: bold;
 }
 
 .navbar-links a {
-    color: white;
+    color: var(--white);
     text-decoration: none;
-    margin: 0 15px;
+    margin: 0 10px;
     font-size: 1.2rem;
     transition: color 0.3s ease;
     position: relative;
 }
 
 .navbar-links a:hover {
-    color: #f5ccc4;
+    color: var(--second-color);
 }
 
 .navbar-links a::before {
@@ -59,10 +65,10 @@ body {
     position: absolute;
     display: block;
     width: 100%;
-    height: 1.5px;
+    height: 2px;
     bottom: 0;
     left: 0;
-    background: white;
+    background: var(--white);
     transform: scaleX(0);
     transform-origin: top right;
     transition: transform 0.2s ease;
@@ -77,9 +83,9 @@ body {
     width: 80%;
     padding: 20px;
     margin-top: 20px;
-    background: white;
+    background: var(--white);
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px var(--shadow);
     animation: fadeInUp 1s ease-in-out;
 }
 
@@ -92,22 +98,8 @@ body {
     text-align: center;
     margin-bottom: 20px;
     font-size: 2rem;
-    color: #4c2b1b;
+    color: var(--primary-color);
     position: relative;
-}
-
-.cart-container h2::after {
-    content: '';
-    display: block;
-    width: 50px;
-    height: 3px;
-    background: #4c2b1b;
-    margin: 10px auto;
-    transition: width 0.3s ease;
-}
-
-.cart-container h2:hover::after {
-    width: 100px;
 }
 
 .cart-items {
@@ -124,13 +116,13 @@ body {
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: var(--white);
+    box-shadow: 0 2px 4px var(--shadow);
     transition: transform 0.3s ease;
 }
 
-.cart-item:hover {
-    transform: scale(1.05);
+.cart-item img:hover {
+    transform: scale(1.5);
 }
 
 .cart-item img {
@@ -138,6 +130,7 @@ body {
     height: 100px;
     object-fit: cover;
     border-radius: 5px;
+    transition: .4s;
 }
 
 .cart-item-info {
@@ -157,8 +150,8 @@ body {
 
 .cart-item .btn {
     padding: 8px 16px;
-    background-color: #4c2b1b;
-    color: #fff;
+    background-color: var(--primary-color);
+    color: var(--white);
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s;
@@ -166,13 +159,13 @@ body {
 }
 
 .cart-item .btn:hover {
-    background-color: #332014;
+    background-color:var(--second-color);
 }
 
 .checkout-button {
     padding: 15px;
-    background-color: #5344db;
-    color: white;
+    background-color: #372d91;
+    color: var(--white);
     border: none;
     border-radius: 5px;
     font-size: 18px;
@@ -181,11 +174,11 @@ body {
     width: 100%;
     margin-top: 20px;
     text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px var(--shadow);
 }
 
 .checkout-button:hover {
-    background-color: #372d91;
+    background-color:var(--second-color);
 }
 
 .toast {
@@ -202,7 +195,7 @@ body {
     left: 50%;
     bottom: 30px;
     font-size: 17px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px var(--shadow);
 }
 
 .toast.show {
