--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+:root {
+    --primary-color: #4c2b1b;
+    --second-color: #e42f0a;
+    --background-color: #f5ccc4;
+    --white: #ffffff;
+    --grey: #484848;
+    --light-grey: #efefef;
+    --shadow: rgba(0, 0, 0, 0.1);
+}
+
 * {
 	padding: 0;
 	margin: 0;
@@ -80,47 +90,47 @@ body {
 /* SCROLLTRIGGER DO WEBSITE!!!!!! */
 
 nav {
-	position: fixed;
-	top: 10vmin;
-	right: 25vmin;
-	width: 15em;
-	height: 10vh;
-	display: flex;
-	justify-content: space-between;
-	align-items: start;
-	z-index: 100;
+    position: fixed;
+    top: 10vmin;
+    right: 25vmin;
+    width: 15em;
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    z-index: 100;
 }
 
 nav a {
-	position: relative;
-	font-size: 1.5rem;
-	color: black;
-	text-decoration: none;
-	padding: 0 1rem 0.15rem 1rem;
-	transition: color 0.3s ease;
+    position: relative;
+    font-size: 1.5rem;
+    color: var(--white);
+    text-decoration: none;
+    padding: 0 1rem 0.15rem 1rem;
+    transition: color 0.3s ease;
 }
 
 nav a:hover {
-	color: white;
+    color: var(--second-color);
 }
 
 nav a::before {
-	content: "";
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 1.5px;
-	bottom: 0;
-	left: 0;
-	background: white;
-	transform: scaleX(0);
-	transform-origin: top right;
-	transition: transform 0.2s ease;
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background: var(--white);
+    transform: scaleX(0);
+    transform-origin: top right;
+    transition: transform 0.2s ease;
 }
 
 nav a:hover::before {
-	transform: scaleX(1);
-	transform-origin: top left;
+    transform: scaleX(1);
+    transform-origin: top left;
 }
 
 .header-circle {
