--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	background: #f5ccc4;
+	background-image: linear-gradient(to right, #f5ccc4, rgba(255, 224, 209, 0.667));
 	background-size: 20px 20px;
 	background-attachment: fixed;
 	overflow-x: hidden;
@@ -111,7 +111,7 @@ nav a {
 }
 
 nav a:hover {
-    color: var(--second-color);
+    color: black;
 }
 
 nav a::before {
