--- a/css/stylecontacto.css
+++ b/css/stylecontacto.css
@@ -149,6 +149,15 @@ body {
     color: var(--white);
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s;
+    display: flex;
+    justify-content: center;
+}
+
+.form button p{
+    justify-content: center;
+    display: flex;
+    margin-top: 3px;
+    margin-left: 5px;
 }
 
 .form button:hover {
