--- a/css/cart.css
+++ b/css/cart.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    background-color: var(--background-color);
+    background-image: linear-gradient(to right, #f5ccc4, rgba(255, 224, 209, 0.667));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,7 +33,7 @@ body {
 
 .navbar {
     width: 100%;
-    background: var(--primary-color);
+    background-image: linear-gradient(to right, rgba(107,88,118,255), rgba(183,111,138,255));
     padding: 15px 20px;
     display: flex;
     justify-content: space-between;
@@ -47,6 +47,10 @@ body {
     font-weight: bold;
 }
 
+.navbar-title:hover {
+    color:#f5ccc4;
+}
+
 .navbar-links a {
     color: var(--white);
     text-decoration: none;
@@ -57,7 +61,7 @@ body {
 }
 
 .navbar-links a:hover {
-    color: var(--second-color);
+    color: #f5ccc4;
 }
 
 .navbar-links a::before {
@@ -98,7 +102,7 @@ body {
     text-align: center;
     margin-bottom: 20px;
     font-size: 2rem;
-    color: var(--primary-color);
+    color: rgba(107,88,118,255);
     position: relative;
 }
 
@@ -141,6 +145,7 @@ body {
 .cart-item-info h3 {
     font-size: 1.2rem;
     margin-bottom: 5px;
+    color: rgba(107,88,118,255);
 }
 
 .cart-item-info p {
@@ -150,7 +155,7 @@ body {
 
 .cart-item .btn {
     padding: 8px 16px;
-    background-color: var(--primary-color);
+    background-image: linear-gradient(to right, rgba(107,88,118,255), rgba(183,111,138,255));
     color: var(--white);
     text-decoration: none;
     border-radius: 5px;
@@ -158,13 +163,13 @@ body {
     cursor: pointer;
 }
 
-.cart-item .btn:hover {
-    background-color:var(--second-color);
+    .cart-item .removeCartItem:hover {
+    background-color: red;
 }
 
 .checkout-button {
     padding: 15px;
-    background-color: #372d91;
+    background-image: linear-gradient(to right, rgba(107,88,118,255), rgba(183,111,138,255));
     color: var(--white);
     border: none;
     border-radius: 5px;
