--- a/css/stylecontacto.css
+++ b/css/stylecontacto.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 :root {
-    --primary-color: #4c2b1b;
-    --second-color: #e42f0a;
-    --background-color: #f5ccc4;
+    --primary-color:rgba(107,88,118,255);
+    --second-color: #f5ccc4;
     --white: #ffffff;
     --grey: #484848;
     --light-grey: #efefef;
@@ -18,11 +17,9 @@
 }
 
 body {
-    min-height: 100vh;
-    display: flex;
     flex-direction: column;
-    background: var(--background-color);
-    background-size: 20px 20px;
+    background-image: linear-gradient(to right, #f5ccc4, rgba(255, 224, 209, 0.667));
+   /*background-size: 20px 20px;*/
     background-attachment: fixed;
     overflow-x: hidden;
     animation: fadeIn 1s ease-in-out;
@@ -35,18 +32,22 @@ body {
 
 .navbar {
     width: 100%;
-    background: var(--primary-color);
     padding: 15px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: var(--white);
     box-shadow: 0 2px 4px var(--shadow);
+    background-image: linear-gradient(to right, rgba(107,88,118,255), rgba(183,111,138,255));
 }
 
 .navbar-title {
     font-size: 1.8rem;
     font-weight: bold;
+}
+
+.navbar-title:hover {
+    color: #f5ccc4;
 }
 
 .navbar-links a {
@@ -145,7 +146,7 @@ body {
     border-radius: 8px;
     font-size: 16px;
     font-weight: 500;
-    background-color: var(--primary-color);
+    background-image: linear-gradient(to right, rgba(107,88,118,255), rgba(183,111,138,255));
     color: var(--white);
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s;
@@ -156,8 +157,8 @@ body {
 .form button p{
     justify-content: center;
     display: flex;
-    margin-top: 3px;
     margin-left: 5px;
+    margin-top: -1px;
 }
 
 .form button:hover {
@@ -166,7 +167,7 @@ body {
 }
 
 .footer {
-    background: var(--primary-color);
+    background-image: linear-gradient(to right, rgba(107,88,118,255), rgba(183,111,138,255));
     color: var(--white);
     padding: 20px 0;
     text-align: center;
